Enhance SEO and improve mobile responsiveness in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de Crédito Hipotecario - Chile</title>
+    <title>Simulador de Crédito Hipotecario - Chile | Simple y Sencillo</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Simulador hipotecario sencillo y simple para calcular tu crédito hipotecario en Chile. Calcula dividendo, intereses y tabla de amortización en UF y CLP. Solo simulador hipotecario, fácil y rápido.">
+    <meta name="keywords" content="simulador hipotecario, simulador hipotecario sencillo, simulador hipotecario simple, solo simulador hipotecario, crédito hipotecario, calculadora hipotecaria, Chile, UF, dividendo, tabla de amortización">
+    <meta name="author" content="Simulador Crédito Hipotecario Chile">
+    <meta property="og:title" content="Simulador de Crédito Hipotecario - Chile | Simple y Sencillo">
+    <meta property="og:description" content="Simulador hipotecario sencillo y simple para calcular tu crédito hipotecario en Chile. Calcula dividendo, intereses y tabla de amortización en UF y CLP.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://simuladorcreditoschile.cl/">
+    <meta property="og:locale" content="es_CL">
+    <link rel="canonical" href="https://simuladorcreditoschile.cl/">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +25,7 @@
 
 <body>
     <div class="main-container">
-        <h1 class="main-title">Simulador de Crédito</h1>
+        <h1 class="main-title">Simulador de Crédito Hipotecario</h1>
         <div class="grid-container">
 
             <!-- Left Column: Inputs -->
