Add favicon and logo images to enhance branding in the project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Simulador de Crédito Hipotecario - Chile | Simple y Sencillo</title>
     <!-- SEO Meta Tags -->
     <meta name="description" content="Simulador hipotecario sencillo y simple para calcular tu crédito hipotecario en Chile. Calcula dividendo, intereses y tabla de amortización en UF y CLP. Solo simulador hipotecario, fácil y rápido.">
