Add footer with link and styling for improved user engagement

--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
             </div>
         </div>
     </div>
+    <footer class="main-footer">
+        <a href="https://github.com/mvergarair/simuladorcreditoschile" target="_blank" rel="noopener" class="footer-link">
+            😎 Coded with Vibes 😎
+        </a>
+    </footer>
 </body>
 
 </html>
