Add Google Analytics tracking script to index.html for improved site analytics

--- a/index.html
+++ b/index.html
@@ -135,6 +135,16 @@
             😎 Coded with Vibes 😎
         </a>
     </footer>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CJL2WBNJV9">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-CJL2WBNJV9');
+    </script>
 </body>
 
 </html>
