--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <script src="./script.js" defer></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CJL2WBNJV9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-CJL2WBNJV9');
+    </script>
 </head>
 
 <body>
@@ -136,15 +144,6 @@
         </a>
     </footer>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CJL2WBNJV9">
-    </script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-CJL2WBNJV9');
-    </script>
 </body>
 
 </html>
