Add dark mode toggle functionality and styles

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./dark-mode.css">
     <script src="./script.js" defer></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CJL2WBNJV9"></script>
     <script>
@@ -33,6 +34,11 @@
 </head>
 
 <body>
+    <div class="dark-mode-toggle">
+        <button id="darkModeToggle" class="toggle-btn" aria-label="Toggle dark mode">
+            <span class="toggle-icon">🌙</span>
+        </button>
+    </div>
     <div class="main-container">
         <h1 class="main-title">Simulador de Crédito Hipotecario</h1>
         <div class="grid-container">
