Update down payment input to display value in CLP and enhance slider layout

--- a/index.html
+++ b/index.html
@@ -56,15 +56,20 @@
 
                     <!-- Down Payment Input -->
                     <div class="input-group">
-                        <label for="downPaymentSlider">Pie (<span id="downPaymentValue">20%</span>)</label>
+                        <label for="downPaymentSlider">Pie (UF) - <span id="downPaymentCLPValue"></span></label>
                         <input type="number" id="downPayment" class="hidden" oninput="updateDownPaymentSlider()"
                             step="100" >
                         <div class="slider-container">
-                            <input type="range" id="downPaymentSlider" class="slider" min="0" max="100" value="20"
-                                step="1" oninput="updateDownPayment()">
-                            <div class="slider-labels">
-                                <span>0%</span>
-                                <span>100%</span>
+                            <div class="slider-wrapper">
+                                <input type="range" id="downPaymentSlider" class="slider" min="0" max="100" value="20"
+                                    step="1" oninput="updateDownPayment()">
+                                <div class="slider-labels">
+                                    <span>0%</span>
+                                    <span>100%</span>
+                                </div>
+                            </div>
+                            <div class="down-payment-value">
+                                <span id="downPaymentValue">20%</span>
                             </div>
                         </div>
                     </div>
